# flax-template

./: .pre-commit-config.yaml  README.md  app.py  pyproject.toml
configs/: default.py
