[tool.poetry]
name = "flax-template"
version = "0.1.0"
description = "A generic template for flax projects"
authors = ["Matthew LeMay <mplemay@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jax = "^0.2.16"
jaxlib = "^0.1.68"
flax = "^0.3.4"
optax = "^0.0.9"
ml-collections = "^0.1.0"
absl-py = "^0.13.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
