[tool.poetry]
name = "flax-template"
version = "0.1.0"
description = "A generic template for flax projects"
authors = ["Matt LeMay <mplemay@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
jax = "^0.2.20"
jaxlib = "^0.1.71"
flax = "^0.3.5"
optax = "^0.0.9"
ml-collections = "^0.1.0"
absl-py = "^0.14.0"
tensorflow-datasets = "^4.4.0"
clu = "^0.0.6"
tensorflow = "^2.6.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
max-line-length = 88
extend-ignore = "E203"
